@@ -158,8 +158,9 @@ public class Lawnmower extends GPProblem implements SimpleProblemForm
             }
         }
 
-    public void describe(final Individual ind, 
+    public void describe(
         final EvolutionState state, 
+        final Individual ind, 
         final int subpopulation, 
         final int threadnum, 
         final int log)
